Update ETL Pipeline Preparation.ipynb

--- a/data/ETL Pipeline Preparation.ipynb
+++ b/data/ETL Pipeline Preparation.ipynb
@@ -1420,7 +1420,7 @@
     "    '''\n",
     "    NofColumns = df.iloc[:,df.columns.duplicated()].shape[1]\n",
     "    NofRows = df.iloc[list(df.duplicated()),:].shape[0]\n",
-    "    print('number of duplicated columns is : ', NofColumns , \n",
+    "    print('number of duplicated Columns is : ', NofColumns , \n",
     "         '\\nnumber of duplicated Rows is : ', NofRows )\n",
     "         "
    ]
